java: use 'Short.valueOf' instead of 'new Short'
Change-Id: I2f0156899b75dd8a3a5600be887b6ac9b6fbdec0