@@ -369,7 +369,7 @@ public class DataAwareFields
                     }
                     if (field.getType().equals(Short.class))
                     {
-                        return new Short((short) 0);
+                        return Short.valueOf((short) 0);
                     }
                     if (field.getType().equals(Integer.class))
                     {
@@ -478,7 +478,7 @@ public class DataAwareFields
         }
         else if (c.equals(Short.class))
         {
-            return new Short((short) i);
+            return Short.valueOf((short) i);
         }
         else if (c.equals(Double.class))
         {
